# ignite-data-profiler-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: demo.yaml  dev.yaml  env_template.yml  prod.yaml  test.yaml
alembic/: env.py
alembic/versions/: f0451d4f4254_add_profiling_tasks_table.py
core/: config.py  logging.py  observability.py  server.py
core/api/v1/: __init__.py
core/api/v1/routes/: overview.py  tasks.py
core/api/v1/schemas/: __init__.py  overview.py  profiler.py  s3.py  task.py
core/database/: session.py
core/exceptions/: __init__.py  base.py  handlers.py
core/llm/: __init__.py  base.py  openai.py  portkey.py
core/middlewares/: __init__.py  cors.py  jwt_auth.py  logging.py  security.py
core/models/: __init__.py  task.py
core/repository/: base.py  task.py
core/schemas/: base.py
core/security/: __init__.py  jwt.py
core/services/: __init__.py  base.py  column_stats.py  task_manager.py
core/services/bigquery/: __init__.py  profiler.py  queries.py
core/services/cost_tracking/: __init__.py  tracker.py
core/services/databricks/: __init__.py  profiler.py  queries.py
core/services/filters/: __init__.py  composite_scorer.py  llm_judge.py  models.py  pipeline.py  schema_introspector.py  statistical_scorer.py
core/services/latency_tracking/: __init__.py  tracker.py
core/services/mysql/: __init__.py  profiler.py  queries.py
core/services/overview/: __init__.py  base.py  bigquery.py  databricks.py  mysql.py  postgres.py  redshift.py  snowflake.py
core/services/postgres/: __init__.py  profiler.py  queries.py
core/services/redshift/: __init__.py  profiler.py  queries.py
core/services/s3/: __init__.py  profiler.py
core/services/sensitivity/: __init__.py  prompt_builder.py
core/services/snowflake/: __init__.py  profiler.py  queries.py
core/services/token_tracking/: __init__.py  tracker.py
core/utils/: llm_config.py
docs/: filter.md  tasks-api.md
libs/: ignite_data_connectors-0.3.0-py3-none-any.whl  ignite_llmops_lib_cost_tracker-0.2.0-py3-none-any.whl  ignite_llmops_lib_latency_tracker-0.2.0-py3-none-any.whl  ignite_llmops_lib_token_counter-0.2.0-py3-none-any.whl
scripts/: startup.sh
tests/: conftest.py  test_cors_middleware.py  test_database_session.py  test_exceptions.py  test_health.py  test_jwt_auth.py  test_logging.py  test_repository_base.py  test_security_middleware.py
tests/filters/: test_composite_scorer.py  test_llm_judge.py  test_pipeline.py  test_schema_introspector.py  test_statistical_scorer.py
tests/llm/: test_base_llm.py  test_kpi_llm.py  test_openai_kpi.py  test_openai_llm.py  test_portkey_kpi.py  test_portkey_llm.py
tests/overview/: conftest.py  test_overview_route.py  test_overview_schemas.py  test_postgres_overview.py
tests/profiler/: __init__.py  conftest.py  test_bigquery_column_stats.py  test_bigquery_profiler.py  test_column_stats_utils.py  test_databricks_column_stats.py  test_databricks_profiler.py  test_mysql_column_stats.py  test_mysql_profiler.py  test_postgres_column_stats.py  test_postgres_profiler_service.py  test_profiler_schemas.py  test_redshift_column_stats.py  test_redshift_profiler.py  test_s3_profiler.py  test_snowflake_profiler.py
tests/sensitivity/: __init__.py  test_prompt_builder.py  test_sensitivity_detection.py
tests/tasks/: conftest.py  test_task_manager.py  test_task_routes.py  test_task_schemas.py
